2007-03-16 [colin]	1.94.0cvs2

	* src/vcal_folder.c
		Fix export not being done when it should

2007-03-12 [colin]	1.94.0cvs1

	* src/vcal_folder.c
		Fix timeout handling. Patch by Pawel Pekala

2007-02-26 [paul]	1.94

	1.94 released

2007-02-26 [colin]	1.93.0cvs15

	* po/ca.po
		Fix msgfmt error

2007-02-26 [paul]	1.93.0cvs14

	* configure.ac
	* po/ca.po
	* po/hu.po
		added by Miquel Oliete and Pader Rezso
	* po/de.po
	* po/es.po
	* po/fi.po
	* po/pl.po
	* po/pt_BR.po
	* po/sk.po
	* po/zh_CN.po
		updated by Stephan Sachse, Ricardo Mones Lastra,
		Flammie Pirinen, Pawel Pekala, Frederico Goncalves
		Guimaraes, Andrej Kacian, and Ralgh Young

2007-02-21 [colin]	1.93.0cvs13

	* src/vcal_manager.c
		Fix little leak

2007-02-19 [colin]	1.93.0cvs12

	* src/vcal_folder.c
	* src/vcal_manager.c
		Don't use CN attribute in ORGANIZER or ATTENDEE
		fields, to avoid putting accentued chars there:
		it breaks this crappy Outlook

2007-02-07 [colin]	1.93.0cvs11

	* src/vcal_folder.c
		Fix early free
	* src/vcal_prefs.c
		Save passwords as passwords

2007-02-06 [colin]	1.93.0cvs10

	* src/vcal_meeting_gtk.c
		Export to ~ if the path is local but not absolute

2007-02-06 [colin]	1.93.0cvs9

	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_meeting_gtk.c
	* src/vcal_meeting_gtk.h
	* src/vcal_prefs.c
	* src/vcal_prefs.h
		Add better GUI for user/password auth in exports
		Mostly untested

2007-02-05 [colin]	1.93.0cvs8

	* src/vcal_meeting_gtk.c
		Fix times when setting meetings across
		DST borders

2007-02-05 [colin]	1.93.0cvs7

	* src/vcal_meeting_gtk.c
		Better time selection

2007-02-04 [colin]	1.93.0cvs6

	* src/vcal_meeting_gtk.c
		Set wmclass in new windows

2007-02-04 [colin]	1.93.0cvs5

	* src/vcalendar.c
		Use text font in the description field

2007-02-04 [colin]	1.93.0cvs4

	* src/vcal_folder.c
		Verify the existence of the event before
		using it.

2007-02-03 [colin]	1.93.0cvs3

	* src/plugin.c
	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c