@@ -93,3 +93,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/ca.po;  ) > 1.93.0cvs15.patchset
 ( cvs diff -u -r 1.2.2.62 -r 1.2.2.63 src/vcal_folder.c;  ) > 1.94.0cvs1.patchset
 ( cvs diff -u -r 1.2.2.63 -r 1.2.2.64 src/vcal_folder.c;  ) > 1.94.0cvs2.patchset
+( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/.cvsignore;  cvs diff -u -r 1.2.2.64 -r 1.2.2.65 src/vcal_folder.c;  cvs diff -u -r 1.1.2.58 -r 1.1.2.59 src/vcal_meeting_gtk.c;  ) > 1.94.0cvs3.patchset
